--- a/index.html
+++ b/index.html
@@ -51,6 +51,7 @@
     <li><a href="/tachyons/">Tachyons</a></li>
     <li><a href="/tailwindcss/">Tailwind CSS</a></li>
     <li><a href="/karma-eslint/">Karma Eslint</a></li>
+    <li><a href="/vuetify/">Vuetify</a></li>
 </ul>
         </div>
         <div class="col-md-10 realContent">
